<resources>
    <string name="app_name">My Application</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="desription" />
<<<<<<< HEAD
=======
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="profil">Profil</string>
    <string name="ajouer_un_v_nement">Ajouer un événement</string>
    <string name="budget">Budget</string>
    <string name="menu">Menu</string>
    <string name="nom2">Loubna El b\'zioui</string>
    <string name="NOM1">soukaina battah</string>
>>>>>>> 43a156d8168b8a6f9aedf29e1772d240b2f96287
</resources>